# p3-analysis-library

./: CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  analysis.html  data.html  genindex.html  index.html  modules.html  notices-and-disclaimers.html  p3analysis.data.html  p3analysis.html  p3analysis.metrics.html  p3analysis.plot.backend.html  p3analysis.plot.html  p3analysis.report.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.github/: dependabot.yml
_downloads/07075ea048bb69f84e56a96405892fba/: plot_customized_navchart.ipynb
_downloads/36eb5c73460de2b4f5af873867d4d962/: plot_customized_cascade.ipynb
_sources/: sg_execution_times.rst.txt
_sources/case-studies/babelstream/: plot_babelstream_cascade.rst.txt  (+2 more)
case-studies/: index.html  sg_execution_times.html
case-studies/babelstream/: index.html  plot_babelstream_cascade.html  plot_babelstream_navchart.html  sg_execution_times.html
docs/source/: conf.py  data.rst  index.rst  notices-and-disclaimers.rst
examples/: index.html  sg_execution_times.html
examples/cascade/: index.html  plot_customized_cascade.html  plot_customized_cascade.py  plot_simple_cascade.html  sg_execution_times.html
examples/metrics/: application_efficiency.html  index.html  multiple_components.html  projection.html  sg_execution_times.html
examples/navchart/: index.html  plot_customized_navchart.html  plot_customized_navchart.py  plot_simple_navchart.html  sg_execution_times.html
p3analysis/data/: coverage.schema
p3analysis/report/: _snapshot.py
(+11 files in other folders)
